[package]
name = "grindset"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
toml = "0.8"
toml_edit = "0.22"
regex = "1.8"
tempfile = "3.10"
